<resources>
    <string name="app_name">Stats</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="statisticalAnalysis">Statistical Analysis</string>
    <string name="calculators">Calculators</string>
    <string name="bayesLaw">Bayes\' Law</string>
    <string name="pOfA">P(A):</string>
    <string name="pOfB">P(B):</string>
    <string name="pOfBGivenA">P(B|A):</string>
    <string name="pOfAGivenB">P(A|B):</string>
    <string name="calculate">Calculate</string>
    <string name="poissonDist">Poisson Distribution</string>
    <string name="llambda">λ:</string>
    <string name="tScore">t-Score</string>
    <string name="singleTail">Single Tail</string>
    <string name="zScore">z-Score</string>
</resources>
