<ScrollView
    android:id="@+id/scrollView"
    android:layout_centerHorizontal="true"
    android:layout_below="@+id/textView5"
    android:layout_alignParentBottom="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kellen.stats.Calculators">



    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/bayesLaw"
            android:id="@+id/textView6"
            android:textStyle="bold"/>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/pOfA"
                android:id="@+id/textView7"
                android:layout_column="0"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/pOfA"
                android:layout_column="1"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/pOfB"
                android:id="@+id/textView8"
                android:layout_column="2"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/pOfB"
                android:layout_column="3"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/pOfBGivenA"
                android:id="@+id/textView9"
                android:layout_column="0"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/pOfBGivenA"
                android:layout_column="1"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/pOfAGivenB"
                android:id="@+id/textView10"
                android:layout_column="2"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/pOfAGivenB"
                android:layout_column="3"
                android:layout_weight="1"/>
        </TableRow>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculate"
            android:id="@+id/bayesButton"
            />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space
                android:layout_width="20px"
                android:layout_height="80px"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/poissonDist"
                android:id="@+id/textView11"
                android:layout_column="0"
                android:textStyle="bold"
                android:layout_span="3"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/llambda"
                android:id="@+id/textView12"
                android:layout_column="0"
                android:gravity="center_horizontal"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/llambda"
                android:layout_column="1"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="k:"
                android:id="@+id/textView13"
                android:layout_column="2"
                android:gravity="center_horizontal"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/k"
                android:layout_column="3"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="P(x=k):"
                android:id="@+id/textView14"
                android:layout_column="0"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/pOfXEqualK"
                android:layout_column="1"/>
        </TableRow>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculate"
            android:id="@+id/poissonButton"/>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space
                android:layout_width="20px"
                android:layout_height="80px"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/tScore"
                android:id="@+id/textView15"
                android:layout_column="0"
                android:textStyle="bold"
                android:layout_span="3"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="x:"
                android:id="@+id/textView16"
                android:layout_column="0"
                android:gravity="center_horizontal"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/tX"
                android:layout_column="1"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="μ:"
                android:id="@+id/textView17"
                android:layout_column="2"
                android:gravity="center_horizontal"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/tMu"
                android:layout_column="3"
                android:layout_weight="1"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="s:"
                android:id="@+id/textView18"
                android:layout_column="0"
                android:gravity="center_horizontal"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/tS"
                android:layout_column="1"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="n:"
                android:id="@+id/textView19"
                android:layout_column="2"
                android:gravity="center_horizontal"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/tN"
                android:layout_column="3"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="t:"
                android:id="@+id/textView20"
                android:layout_column="0"
                android:gravity="center_horizontal"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/tT"
                android:layout_column="1"/>
        </TableRow>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculate"
            android:id="@+id/tScoreButton"/>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space
                android:layout_width="20px"
                android:layout_height="80px"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/zScore"
                android:id="@+id/textView21"
                android:layout_column="0"
                android:textStyle="bold"
                android:layout_span="3"/>
        </TableRow>

    </TableLayout>
</ScrollView>

